--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -81,13 +81,7 @@ msgctxt "#30015"
 msgid "Use foldername"
 msgstr ""
 
-msgctxt "#30016"
-msgid "Display exif info"
-msgstr ""
-
-msgctxt "#30017"
-msgid "Date: "
-msgstr ""
+#empty strings from id 30016 to 30017
 
 msgctxt "#30018"
 msgid "Title: "
@@ -99,4 +93,12 @@ msgstr ""
 
 msgctxt "#30020"
 msgid "Keywords: "
+msgstr ""
+
+msgctxt "#30021"
+msgid "Display picture date"
+msgstr ""
+
+msgctxt "#30022"
+msgid "Display additional picture tags"
 msgstr ""
