--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
+v0.0.8
+- added music info option
+- localize date format
+- removed iptc info labels
+
 v0.0.7
-- update language files
+- change picture tags code
 
 v0.0.6
 - use largeimage controls in skin
