--- a/resources/language/Afrikaans/strings.po
+++ b/resources/language/Afrikaans/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-10-17 14:44+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Afrikaans (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/af/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,27 @@ msgstr "Prente Lêer"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Verdof vlak"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Effek"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Skyfie"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Kruisdemp"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Beeldrol en zoem"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Hoeveelheid sekondes om elke beeld te vertoon"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Nie in staat gestel"
