--- a/resources/language/Chinese (Traditional)/strings.po
+++ b/resources/language/Chinese (Traditional)/strings.po
@@ -1,16 +1,15 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-06-26 09:23+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
-"Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/zh_TW/)\n"
+"Language-Team: Chinese (Traditional) (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -40,3 +39,43 @@ msgstr "圖片資料夾"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "暗化等級"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "效果"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "幻燈片"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "淡入淡出"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "平移和縮放"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "顯示每張圖片的秒數"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "等比例圖片放大至全螢幕"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "顯示圖片名稱"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "關閉"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "使用檔案名稱"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "使用資料夾名稱"
