--- a/resources/language/Dutch/strings.po
+++ b/resources/language/Dutch/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-05-28 23:40+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Dutch (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Image Folder"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Dimveau"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Effect"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Dia"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Vloeiende overgang"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Draaien en zoomen"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Aantal seconden om elk plaatje te tonen"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "schaal foto's naar volledig scherm"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Weergeven foto naam"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Uitgeschakeld"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Gebruik bestandsnaam"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Gebruik mapnaam"
