--- a/resources/language/Estonian/strings.po
+++ b/resources/language/Estonian/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-06-01 21:18+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Estonian (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/et/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Piltide kaust"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Hämarduse aste"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Efekt"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Slaid"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Siire"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Panoraamina ja suurenda"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Sekundite arv iga pildi kuvamiseks"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Suurenda pilt täisekraanile"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Näita pildi nime"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Ei kasutata"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Kasuta faili nime"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Kasuta kausta nime"
