--- a/resources/language/Italian/strings.po
+++ b/resources/language/Italian/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-05-31 10:05+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Cartella di immagini"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Livello di oscuramento"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Effetto"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Slide"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Dissolvenza incrociata"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Pan & zoom"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Quantità di secondi per visualizzare ogni immagine"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Ridimensioni immagini a schermo intero"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Mostra il nome dell'immagine"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Disabilitato"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Usa il nome del file"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Usa il nome della cartella"
