--- a/resources/language/Lithuanian/strings.po
+++ b/resources/language/Lithuanian/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-07-17 20:18+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Lithuanian (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/lt/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Paveikslėlių Fanart"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Pritemdimo lygis"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Efektas"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Skaidrės"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Užslanka"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Perkelti ir padidinti"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Laikas sekundėmis, vaizdo rodymui ekrane"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Atvaizdų mastelis visame ekrane"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Rodyti vaizdo pavadinimą"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Atjungta"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Naudoti failo pavadinimą"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Naudoti aplanko pavadinimą"
