--- a/resources/language/Portuguese (Brazil)/strings.po
+++ b/resources/language/Portuguese (Brazil)/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-05-29 15:41+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Pasta com Imagens"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Nível de dimerização"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Efeito"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Escorrega"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Crossfade"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Pan e zoom"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Total de segundos para mostrar cada imagem"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Escalonar imagens em tela cheia"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Mostrar nome da imagem"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Desabilitado"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Usar Nome do Arquivo"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Usar Nome da Pasta"
