--- a/resources/language/Slovenian/strings.po
+++ b/resources/language/Slovenian/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-06-06 15:45+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Slovenian (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/sl/)\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +18,7 @@ msgstr ""
 
 msgctxt "#30000"
 msgid "Source of slideshow images"
-msgstr "Vir slik za projekcijo"
+msgstr "Vir slik za diaprojekcijo"
 
 msgctxt "#30001"
 msgid "Folder"
@@ -40,3 +39,27 @@ msgstr "Mapa s slikami"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Nivo zatemnitve"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Učinek"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Drsenje"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Prelivanje"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Premik in povečava"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Čas prikaza posamezne slike"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Izključeno"
