--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-06-04 09:35+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Imagenes de una carpeta"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Nivel de atenuación"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Efecto"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Diapositiva"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Crossfade"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Desplazamiento y zoom"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Número de segundos a mostrar cada imagen"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Escalar las imágenes en pantalla completa"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Mostrar nombre de la imágen"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Deshabilitado"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Usar nombre de archivo"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Usar nombre de carpeta"
