--- a/resources/language/Czech/strings.po
+++ b/resources/language/Czech/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-06-01 17:54+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Czech (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/cs/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Složka s obrázky"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Úroveň ztmavení"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Efekt"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Sklouznutí"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Prolnutí"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Posun a přiblížení"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Doba zobrazení každého obrázku (sekundy)"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Škálovat obrázek na rozlišení celé obrazovky"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Zobrazit název obrázku"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Zakázáno"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Použít název souboru"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Použít název složky"
