--- a/resources/language/Finnish/strings.po
+++ b/resources/language/Finnish/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-05-29 11:04+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Finnish (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/fi/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,27 @@ msgstr "Kuvakansio"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Himmennystaso"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Tehoste"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Diakuva"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Ristihäivytys"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Kohdistus ja zoomaus"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Yksittäisen kuvan näyttämiseen käytettävä aika sekunneissa"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Ei käytössä"
