--- a/resources/language/Galician/strings.po
+++ b/resources/language/Galician/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-07-08 15:57+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Galician (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/gl/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,27 @@ msgstr "Cartafol de Imaxes"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Nivel de atenuación"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Efecto"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Presentación"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Atenuación"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Panorámica e ampliación"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "tempo en segundos nos que se amosará cada imaxe"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Desactivado"
