--- a/resources/language/Greek/strings.po
+++ b/resources/language/Greek/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-05-29 01:31+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Greek (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/el/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Φάκελος Εικόνων"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Επίπεδο σκίασης"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Εφέ"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Διαφάνεια"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Σταδιακό σβήσιμο"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Εφέ pan & zoom"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Δευτερόλεπτα προβολής κάθε εικόνας"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Εικόνες σε κλίμακα στην πλήρη οθόνη"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Προβολή ονόματος εικόνας"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Ανενεργή"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Χρήση ονόματος αρχείου"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Χρήση ονόματος φακέλου"
