--- a/resources/language/Hungarian/strings.po
+++ b/resources/language/Hungarian/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-05-30 13:22+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Kép mappa"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Elsötétítés szintje"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Hatás"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Csúszka"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Átmosás"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Pásztázás és nagyítás (Pan&Zoom)"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Képek megjelenítési ideje másodperceben"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Képek teljes képernyőre igazítása"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Kép nevének megjelenítése"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Letiltva"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Fájlnév használata"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Mappanév használata"
