--- a/resources/language/Japanese/strings.po
+++ b/resources/language/Japanese/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-05-30 23:54+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Japanese (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,27 @@ msgstr "画像フォルダー"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "ぼかしレベル"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "エフェクト"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "スライド"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "クロスフェード"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "パン＆ズーム"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "各画像を表示する秒数"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "無効"
