--- a/resources/language/Korean/strings.po
+++ b/resources/language/Korean/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-07-17 00:03+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Korean (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/ko/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "이미지 폴더"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "어두운 정도"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "효과"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "슬라이드"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "크로스페이드"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "확대와 이동"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "각 이미지를 표시할 시간 (초)"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "전체화면 늘이기"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "이미지 이름 표시"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "사용 안 함"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "파일명 사용"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "폴더명 사용"
