--- a/resources/language/Portuguese/strings.po
+++ b/resources/language/Portuguese/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-06-28 04:27+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Portuguese (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/pt/)\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +18,7 @@ msgstr ""
 
 msgctxt "#30000"
 msgid "Source of slideshow images"
-msgstr "Origem das imagens"
+msgstr "Origem das imagens de Slides"
 
 msgctxt "#30001"
 msgid "Folder"
@@ -40,3 +39,43 @@ msgstr "Pasta das imagens"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Nível de esvanecimento"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Efeito"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Slide"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Sobreposição na transição"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Movimento e Ampliação"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Segundos a exibir cada imagem"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Graduar imagens para ecrã cheio"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Exibir nome da imagem"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Desligado"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Usar nome do ficheiro"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Usar nome da pasta"
