--- a/resources/language/Romanian/strings.po
+++ b/resources/language/Romanian/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-06-01 06:51+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Romanian (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/ro/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Dosar imagini"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Nivel întunecare"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Efect"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Glisează"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Suprapunere"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Deplasare şi mărire"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Câte secunde se afişează fiecare imagine"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Imagini afișate pe tot ecranul"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Afișare nume imagini"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Dezactivat"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Utilizează nume fișier"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Utilizează nume director"
