--- a/resources/language/Russian/strings.po
+++ b/resources/language/Russian/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-05-30 13:32+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,27 @@ msgstr "Папка изображений"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Уровень затемнения"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Эффект"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Слайды"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Затухание"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Панорамирование и масштабирование"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Сколько секунд отображать каждый слайд"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Откл."
