--- a/resources/language/Slovak/strings.po
+++ b/resources/language/Slovak/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-06-03 13:42+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Slovak (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/sk/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Priečinok obrázkov"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Úroveň stlmenia"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Efekt"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Diapozitívy"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Prelínanie"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Postupné približovanie"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Počet sekúnd, počas ktorých bude zobrazený obrázok"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Zmenšiť obrázky na celú obrazovku"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Zobraziť názov obrázku"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Zakázaný"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Použiť názov súboru"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Použiť názov priečinku"
