--- a/resources/language/Swedish/strings.po
+++ b/resources/language/Swedish/strings.po
@@ -1,14 +1,13 @@
 # XBMC Media Center language file
 # Addon Name: Slideshow
-# Addon id: screensaver.xbmc.builtin.slideshow
-# Addon version: 1.0.0
+# Addon id: screensaver.xbmc.slideshow
 # Addon Provider: Team XBMC
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Main Translation Project (Frodo)\n"
 "Report-Msgid-Bugs-To: http://trac.xbmc.org/\n"
-"POT-Creation-Date: 2012-05-28 15:38+0000\n"
-"PO-Revision-Date: 2012-06-06 21:55+0000\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
 "Language-Team: Swedish (http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -40,3 +39,43 @@ msgstr "Bildmapp"
 msgctxt "#30005"
 msgid "Dim level"
 msgstr "Mörkningsnivå"
+
+msgctxt "#30006"
+msgid "Effect"
+msgstr "Effekt"
+
+msgctxt "#30007"
+msgid "Slide"
+msgstr "Bildspel"
+
+msgctxt "#30008"
+msgid "Crossfade"
+msgstr "Övertoning"
+
+msgctxt "#30009"
+msgid "Pan and zoom"
+msgstr "Panorera och zooma"
+
+msgctxt "#30010"
+msgid "Amount of seconds to display each image"
+msgstr "Antal sekunder att visa varje bild"
+
+msgctxt "#30011"
+msgid "Scale images fullscreen"
+msgstr "Skala bilden till helskärm"
+
+msgctxt "#30012"
+msgid "Display image name"
+msgstr "Visa bildnamnet"
+
+msgctxt "#30013"
+msgid "Disabled"
+msgstr "Inaktiverad"
+
+msgctxt "#30014"
+msgid "Use filename"
+msgstr "Använd filnamnet"
+
+msgctxt "#30015"
+msgid "Use foldername"
+msgstr "Använd mappnamnet"
