--- a/resources/language/German/strings.po
+++ b/resources/language/German/strings.po
@@ -79,3 +79,23 @@ msgstr "Nutze Dateiname"
 msgctxt "#30015"
 msgid "Use foldername"
 msgstr "Nutze Ordnername"
+
+msgctxt "#30021"
+msgid "Display picture date"
+msgstr "Bilddatum anzeigen"
+
+msgctxt "#30022"
+msgid "Display additional picture tags"
+msgstr "Zusätzliche Bild-Schlagworte anzeigen"
+
+msgctxt "#30023"
+msgid "Display music info during audio playback"
+msgstr "Zeige Musikinformationen während der Wiedergabe an"
+
+msgctxt "#30024"
+msgid "Basic"
+msgstr "Basis"
+
+msgctxt "#30025"
+msgid "Additional"
+msgstr "Zusätzlich"
