add cache option
git-svn-id: http://ronie.googlecode.com/svn/trunk/screensaver.xbmc.slideshow@584 db7c0809-cc3b-abc7-1a57-eb63581bcc4c

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 v0.1.0
 - added option to disable the randomizing of images
 - added display name for fanart
+- added cache option
 
 v0.0.9
 - silence iptc warnings
