--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v0.1.1
+- fix potential issues due to missing module imports
+
 v0.1.0
 - added option to disable the randomizing of images
 - added display name for fanart
